<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.emma_jil.androidlabs_w2018.NationalLibraryActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labTitle"
        android:textSize="14pt"
        android:textColor="@color/fontColour"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_weight="4"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:contentDescription="@string/flagDescript"
        android:layout_weight="2"
        android:scaleType="centerInside"
        android:gravity="center"/>

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/passw"
        android:layout_weight="1"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RegisterButton"
            android:layout_weight="1"
            android:text="@string/rButton"
            style="@style/AppTheme"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:id="@+id/LoginButton"
            android:text="@string/lButton"
            style="@style/AppTheme"/>
    </LinearLayout>

</android.widget.LinearLayout>
